--- a/src/main/resources/templates/allUsersPage.html
+++ b/src/main/resources/templates/allUsersPage.html
@@ -34,6 +34,7 @@
                 <div th:each="role: ${user.getRoles()}">
                     <span th:if="(${role.getName()} == 'ROLE_ADMIN')" th:utext="Администратор"></span>
                     <span th:if="(${role.getName()} == 'ROLE_VIP')" th:utext="Вип"></span>
+                    <span th:if="(${role.getName()} == 'ROLE_USER')" th:utext="Юзверь"></span>
                 </div>
             </td>
             <td>
